Home page styles implementation; Add "Discounts" section; Add products carousel; Add backgrounds; Add icons...

--- a/index.html
+++ b/index.html
@@ -10,7 +10,316 @@
 </head>
 <body>
 <div class="page-container">
-
+  <header>
+    <div class="content-wrapper">
+      <div class="header-container">
+        <a href="/" class="logo">
+          <img src="./assets/images/logosmall.png" alt="Compare App">
+        </a>
+        <nav class="header-navigation">
+          <ul class="nav-container">
+            <li>
+              <a href="#">Shop</a>
+            </li>
+            <li>
+              <a href="#">🔥 Unique Functions<i class="fa fa-chevron-down"></i></a>
+              <ul class="sub-menu">
+                <li><a href="#">Compare few items function</a></li>
+                <li><a href="#">Super function</a></li>
+                <li><a href="#">Extra function</a></li>
+                <li><a href="#">Amazing function</a></li>
+                <li><a href="#">Awesome function</a></li>
+                <li><a href="#">Ideal function</a></li>
+                <li><a href="#">Awesome Mega Super Unbelievable function!</a></li>
+              </ul>
+            </li>
+            <li>
+              <a href="#">💰 Best conversations pages<i class="fa fa-chevron-down"></i></a>
+              <ul class="sub-menu">
+                <li><a href="#">Frontend Search</a></li>
+                <li><a href="#">Listing example</a></li>
+                <li><a href="#">Top set page</a></li>
+                <li><a href="#">Versus Page</a></li>
+                <li><a href="#">Versus Page 2</a></li>
+                <li><a href="#">Top review List</a></li>
+                <li><a href="#">Price Range Page</a></li>
+              </ul>
+            </li>
+            <li>
+              <a href="#">💗 My wishlist</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+  </header>
+  <section class="search-and-compare">
+    <div class="content-wrapper">
+      <div class="search-compare-holder">
+        <h2 class="heading">Search and Compare</h2>
+        <div class="slogan">Read our reviews and find the best product!</div>
+        <div class="search-box">
+          <label><input type="text" placeholder="Find the best product" class="search-input"></label>
+          <button type="button" class="search-button">Search</button>
+        </div>
+        <div class="alternative">
+          <a href="#">Or do another compare here >></a>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="discounts">
+    <div class="content-wrapper">
+      <div class="discounts-container">
+        <h4 class="section-heading">Check Discount deals</h4>
+        <h6 class="sub-heading">Discover the latest trends 💖</h6>
+        <div class="discounts-carousel">
+          <div class="carousel-container holder">
+            <div class="carousel-item">
+              <div class="discount-item">
+                <div class="wish-or-compare">
+                  <span class="wish-item">
+                    <i class="fa fa-heart-o"></i>
+                  </span>
+                  <span class="compare-item">
+                    <i class="fa fa-bar-chart"></i>
+                  </span>
+                </div>
+                <div class="item-info">
+                  <a href="#" class="product-picture">
+                    <img src="assets/images/product-image.png" alt="Product">
+                  </a>
+                  <a href="#" class="category-name">Super Products</a>
+                  <h6 class="product-name">
+                    <i class="fa fa-fire"></i>
+                    <a href="#" title="Best Product Ever Full Long Name!">
+                      Best Product Ever!
+                    </a>
+                  </h6>
+                  <div class="product-rate" title="Rated 4.85 out of 5">
+                    <span class="rate-star active">★</span>
+                    <span class="rate-star active">★</span>
+                    <span class="rate-star active">★</span>
+                    <span class="rate-star active">★</span>
+                    <span class="rate-star active">★</span>
+                  </div>
+                  <div class="best-deal">Best deal at: <strong>Ebay</strong></div>
+                  <ul class="product-params">
+                    <li>Parameter 1</li>
+                    <li>Best parameter</li>
+                    <li>Great Usability</li>
+                  </ul>
+                </div>
+                <div class="product-additional-info">
+                  <div class="product-price">
+                    <div class="current-price">$555.99</div>
+                  </div>
+                  <div class="more">
+                    <a href="#">+ 3 more</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="discount-item">
+                <div class="wish-or-compare">
+                  <span class="wish-item">
+                    <i class="fa fa-heart-o"></i>
+                  </span>
+                  <span class="compare-item">
+                    <i class="fa fa-bar-chart"></i>
+                  </span>
+                </div>
+                <div class="item-info">
+                  <a href="#" class="product-picture">
+                    <img src="assets/images/product-image.png" alt="Product">
+                  </a>
+                  <a href="#" class="category-name">Best Products</a>
+                  <h6 class="product-name">
+                    <i class="fa fa-fire"></i>
+                    <a href="#" title="Best Product With long Name To check layout">
+                      Best Product With long Name To check layout
+                    </a>
+                  </h6>
+                  <div class="product-rate" title="Rated 4 out of 5">
+                    <span class="rate-star active">★</span>
+                    <span class="rate-star active">★</span>
+                    <span class="rate-star active">★</span>
+                    <span class="rate-star active">★</span>
+                    <span class="rate-star">★</span>
+                  </div>
+                  <div class="best-deal">Best deal at: <strong>Amazon</strong></div>
+                  <ul class="product-params">
+                    <li>Parameter 1</li>
+                    <li>Best parameter</li>
+                    <li>Great Usability</li>
+                    <li>More parameters</li>
+                    <li>More more parameters</li>
+                  </ul>
+                </div>
+                <div class="product-additional-info">
+                  <div class="product-price">
+                    <div class="current-price">$123.99</div>
+                  </div>
+                  <div class="more">
+                    <a href="#">+ 5 more</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="discount-item">
+                <div class="wish-or-compare">
+                  <span class="wish-item">
+                    <i class="fa fa-heart-o"></i>
+                  </span>
+                  <span class="compare-item">
+                    <i class="fa fa-bar-chart"></i>
+                  </span>
+                </div>
+                <div class="item-info">
+                  <a href="#" class="product-picture">
+                    <img src="assets/images/product-image.png" alt="Product">
+                  </a>
+                  <a href="#" class="category-name">Greatest Products</a>
+                  <h6 class="product-name">
+                    <i class="fa fa-fire"></i>
+                    <a href="#" title="Just Product">
+                      Just Product
+                    </a>
+                  </h6>
+                  <div class="product-rate" title="Rated 5 out of 5">
+                    <span class="rate-star active">★</span>
+                    <span class="rate-star active">★</span>
+                    <span class="rate-star active">★</span>
+                    <span class="rate-star active">★</span>
+                    <span class="rate-star active">★</span>
+                  </div>
+                  <div class="best-deal">Best deal at: <strong>Ebay</strong></div>
+                  <ul class="product-params">
+                    <li>Parameter 1</li>
+                  </ul>
+                </div>
+                <div class="product-additional-info">
+                  <div class="product-price">
+                    <div class="current-price">$99.99</div>
+                  </div>
+                  <div class="more">
+                    <a href="#">+ 1 more</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="discount-item">
+                <div class="wish-or-compare">
+                  <span class="wish-item">
+                    <i class="fa fa-heart-o"></i>
+                  </span>
+                  <span class="compare-item">
+                    <i class="fa fa-bar-chart"></i>
+                  </span>
+                </div>
+                <div class="item-info">
+                  <a href="#" class="product-picture">
+                    <img src="assets/images/product-image.png" alt="Product">
+                  </a>
+                  <a href="#" class="category-name">Regular Products</a>
+                  <h6 class="product-name">
+                    <i class="fa fa-fire"></i>
+                    <a href="#" title="Just Product">
+                      Simple Product
+                    </a>
+                  </h6>
+                  <div class="product-rate" title="Rated 3 out of 5">
+                    <span class="rate-star active">★</span>
+                    <span class="rate-star active">★</span>
+                    <span class="rate-star active">★</span>
+                    <span class="rate-star">★</span>
+                    <span class="rate-star">★</span>
+                  </div>
+                  <div class="best-deal">Best deal at: <strong>AliExpress</strong></div>
+                  <ul class="product-params">
+                    <li>Parameter 1</li>
+                    <li>Parameter 2</li>
+                    <li>Parameter 3</li>
+                    <li>Parameter 4</li>
+                  </ul>
+                </div>
+                <div class="product-additional-info">
+                  <div class="product-price">
+                    <div class="current-price">$999.99</div>
+                  </div>
+                  <div class="more">
+                    <a href="#">+ 10 more</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="discount-item">
+                <div class="wish-or-compare">
+                  <span class="wish-item">
+                    <i class="fa fa-heart-o"></i>
+                  </span>
+                  <span class="compare-item">
+                    <i class="fa fa-bar-chart"></i>
+                  </span>
+                </div>
+                <div class="item-info">
+                  <a href="#" class="product-picture">
+                    <img src="assets/images/product-image.png" alt="Product">
+                  </a>
+                  <a href="#" class="category-name">Home Products</a>
+                  <h6 class="product-name">
+                    <i class="fa fa-fire"></i>
+                    <a href="#" title="Just Product">
+                      Canon Camera
+                    </a>
+                  </h6>
+                  <div class="product-rate" title="Rated 4.7 out of 5">
+                    <span class="rate-star active">★</span>
+                    <span class="rate-star active">★</span>
+                    <span class="rate-star active">★</span>
+                    <span class="rate-star active">★</span>
+                    <span class="rate-star active">★</span>
+                  </div>
+                  <div class="best-deal">Best deal at: <strong>BestBuy</strong></div>
+                  <ul class="product-params">
+                    <li>100500 megapixels</li>
+                  </ul>
+                </div>
+                <div class="product-additional-info">
+                  <div class="product-price">
+                    <div class="current-price">$1999.99</div>
+                  </div>
+                  <div class="more">
+                    <a href="#">+ 4 more</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <button type="button" class="action-button active go-prev"><i class="fa fa-chevron-left"></i></button>
+          <button type="button" class="action-button go-next"><i class="fa fa-chevron-right"></i></button>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="tracking-info-slogan">
+    <h3>We are tracking prices from more than 20 most popular shops to give you best deals</h3>
+  </section>
+  <section class="product-listing">
+    <div class="content-wrapper">
+      <div class="products-list-container">
+        <h4 class="section-heading">Find Your Product Now</h4>
+        <h6 class="sub-heading">Discover the hottest deals 🔥</h6>
+        <div class="listing-description">
+          By uniting selected online shops on one platform, searching helps you save time and discover new shops and trends worldwide that were yet unknown to you.
+        </div>
+      </div>
+    </div>
+  </section>
 </div>
 </body>
 </html>
