Home Page styles changes; Add bottom section with news and reviews; Add footer with "Subscribe on Newsletters" form.

--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
                   </span>
                 </div>
                 <div class="item-info">
-                  <a href="#" class="product-picture">
-                    <img src="assets/images/product-image.png" alt="Product">
-                  </a>
+                  <figure class="product-picture">
+                    <a href="#" class="picture-link"><img src="assets/images/product-image.png" alt="Product"></a>
+                  </figure>
                   <a href="#" class="category-name">Super Products</a>
                   <h6 class="product-name">
                     <i class="fa fa-fire"></i>
@@ -131,9 +131,9 @@
                   </span>
                 </div>
                 <div class="item-info">
-                  <a href="#" class="product-picture">
-                    <img src="assets/images/product-image.png" alt="Product">
-                  </a>
+                  <figure class="product-picture">
+                    <a href="#" class="picture-link"><img src="assets/images/product-image.png" alt="Product"></a>
+                  </figure>
                   <a href="#" class="category-name">Best Products</a>
                   <h6 class="product-name">
                     <i class="fa fa-fire"></i>
@@ -178,9 +178,9 @@
                   </span>
                 </div>
                 <div class="item-info">
-                  <a href="#" class="product-picture">
-                    <img src="assets/images/product-image.png" alt="Product">
-                  </a>
+                  <figure class="product-picture">
+                    <a href="#" class="picture-link"><img src="assets/images/product-image.png" alt="Product"></a>
+                  </figure>
                   <a href="#" class="category-name">Greatest Products</a>
                   <h6 class="product-name">
                     <i class="fa fa-fire"></i>
@@ -221,9 +221,9 @@
                   </span>
                 </div>
                 <div class="item-info">
-                  <a href="#" class="product-picture">
-                    <img src="assets/images/product-image.png" alt="Product">
-                  </a>
+                  <figure class="product-picture">
+                    <a href="#" class="picture-link"><img src="assets/images/product-image.png" alt="Product"></a>
+                  </figure>
                   <a href="#" class="category-name">Regular Products</a>
                   <h6 class="product-name">
                     <i class="fa fa-fire"></i>
@@ -267,9 +267,9 @@
                   </span>
                 </div>
                 <div class="item-info">
-                  <a href="#" class="product-picture">
-                    <img src="assets/images/product-image.png" alt="Product">
-                  </a>
+                  <figure class="product-picture">
+                    <a href="#" class="picture-link"><img src="assets/images/product-image.png" alt="Product"></a>
+                  </figure>
                   <a href="#" class="category-name">Home Products</a>
                   <h6 class="product-name">
                     <i class="fa fa-fire"></i>
@@ -315,7 +315,8 @@
         <h4 class="section-heading">Find Your Product Now</h4>
         <h6 class="sub-heading">Discover the hottest deals 🔥</h6>
         <div class="listing-description">
-          By uniting selected online shops on one platform, searching helps you save time and discover new shops and trends worldwide that were yet unknown to you.
+          By uniting selected online shops on one platform, searching helps you save time and discover new shops and trends worldwide that
+          were yet unknown to you.
         </div>
         <div class="listing tabs-container">
           <div class="tabs-headings">
@@ -337,9 +338,9 @@
                 </div>
                 <div class="sale-item">-33%</div>
                 <div class="item-info">
-                  <a href="#" class="product-picture">
-                    <img src="assets/images/product-image.png" alt="Product">
-                  </a>
+                  <figure class="product-picture">
+                    <a href="#" class="picture-link"><img src="assets/images/product-image.png" alt="Product"></a>
+                  </figure>
                   <a href="#" class="category-name">
                     <span class="expired">Expired</span>
                     Home Products
@@ -384,9 +385,9 @@
                   </span>
                 </div>
                 <div class="item-info">
-                  <a href="#" class="product-picture">
-                    <img src="assets/images/product-image.png" alt="Product">
-                  </a>
+                  <figure class="product-picture">
+                    <a href="#" class="picture-link"><img src="assets/images/product-image.png" alt="Product"></a>
+                  </figure>
                   <a href="#" class="category-name">hiTech</a>
                   <h6 class="product-name">
                     <i class="fa fa-fire"></i>
@@ -429,9 +430,9 @@
                   </span>
                 </div>
                 <div class="item-info">
-                  <a href="#" class="product-picture">
-                    <img src="assets/images/product-image.png" alt="Product">
-                  </a>
+                  <figure class="product-picture">
+                    <a href="#" class="picture-link"><img src="assets/images/product-image.png" alt="Product"></a>
+                  </figure>
                   <a href="#" class="category-name">Different Products</a>
                   <h6 class="product-name">
                     <i class="fa fa-fire"></i>
@@ -475,9 +476,9 @@
                   </span>
                 </div>
                 <div class="item-info">
-                  <a href="#" class="product-picture">
-                    <img src="assets/images/product-image.png" alt="Product">
-                  </a>
+                  <figure class="product-picture">
+                    <a href="#" class="picture-link"><img src="assets/images/product-image.png" alt="Product"></a>
+                  </figure>
                   <a href="#" class="category-name">
                     <span class="expired">Expired</span>
                     Products
@@ -521,9 +522,9 @@
                   </span>
                 </div>
                 <div class="item-info">
-                  <a href="#" class="product-picture">
-                    <img src="assets/images/product-image.png" alt="Product">
-                  </a>
+                  <figure class="product-picture">
+                    <a href="#" class="picture-link"><img src="assets/images/product-image.png" alt="Product"></a>
+                  </figure>
                   <a href="#" class="category-name">Home Products</a>
                   <h6 class="product-name">
                     <i class="fa fa-fire"></i>
@@ -564,9 +565,9 @@
                   </span>
                 </div>
                 <div class="item-info">
-                  <a href="#" class="product-picture">
-                    <img src="assets/images/product-image.png" alt="Product">
-                  </a>
+                  <figure class="product-picture">
+                    <a href="#" class="picture-link"><img src="assets/images/product-image.png" alt="Product"></a>
+                  </figure>
                   <a href="#" class="category-name">Kids Products</a>
                   <h6 class="product-name">
                     <i class="fa fa-fire"></i>
@@ -608,9 +609,9 @@
                 </div>
                 <div class="sale-item">-42%</div>
                 <div class="item-info">
-                  <a href="#" class="product-picture">
-                    <img src="assets/images/product-image.png" alt="Product">
-                  </a>
+                  <figure class="product-picture">
+                    <a href="#" class="picture-link"><img src="assets/images/product-image.png" alt="Product"></a>
+                  </figure>
                   <a href="#" class="category-name">
                     <span class="expired">Expired</span>
                     Men's Products
@@ -655,9 +656,9 @@
                   </span>
                 </div>
                 <div class="item-info">
-                  <a href="#" class="product-picture">
-                    <img src="assets/images/product-image.png" alt="Product">
-                  </a>
+                  <figure class="product-picture">
+                    <a href="#" class="picture-link"><img src="assets/images/product-image.png" alt="Product"></a>
+                  </figure>
                   <a href="#" class="category-name">Home Products</a>
                   <h6 class="product-name">
                     <i class="fa fa-fire"></i>
@@ -698,9 +699,9 @@
                   </span>
                 </div>
                 <div class="item-info">
-                  <a href="#" class="product-picture">
-                    <img src="assets/images/product-image.png" alt="Product">
-                  </a>
+                  <figure class="product-picture">
+                    <a href="#" class="picture-link"><img src="assets/images/product-image.png" alt="Product"></a>
+                  </figure>
                   <a href="#" class="category-name">hiTech</a>
                   <h6 class="product-name">
                     <i class="fa fa-fire"></i>
@@ -744,9 +745,9 @@
                 </div>
                 <div class="sale-item">-21%</div>
                 <div class="item-info">
-                  <a href="#" class="product-picture">
-                    <img src="assets/images/product-image.png" alt="Product">
-                  </a>
+                  <figure class="product-picture">
+                    <a href="#" class="picture-link"><img src="assets/images/product-image.png" alt="Product"></a>
+                  </figure>
                   <a href="#" class="category-name">Different Products</a>
                   <h6 class="product-name">
                     <i class="fa fa-fire"></i>
@@ -791,9 +792,9 @@
                   </span>
                 </div>
                 <div class="item-info">
-                  <a href="#" class="product-picture">
-                    <img src="assets/images/product-image.png" alt="Product">
-                  </a>
+                  <figure class="product-picture">
+                    <a href="#" class="picture-link"><img src="assets/images/product-image.png" alt="Product"></a>
+                  </figure>
                   <a href="#" class="category-name">
                     <span class="expired">Expired</span>
                     Home Products
@@ -837,9 +838,9 @@
                   </span>
                 </div>
                 <div class="item-info">
-                  <a href="#" class="product-picture">
-                    <img src="assets/images/product-image.png" alt="Product">
-                  </a>
+                  <figure class="product-picture">
+                    <a href="#" class="picture-link"><img src="assets/images/product-image.png" alt="Product"></a>
+                  </figure>
                   <a href="#" class="category-name">
                     <span class="expired">Expired</span>
                     Kitchen Products
@@ -886,7 +887,8 @@
         <h4 class="section-heading">New products of this year are available Now</h4>
         <h6 class="sub-heading">Check what you can buy this year</h6>
         <div class="video-content">
-          <iframe width="100%" height="555" src="https://www.youtube.com/embed/_lK4cX5xGiQ" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture"></iframe>
+          <iframe width="100%" height="555" src="https://www.youtube.com/embed/_lK4cX5xGiQ" frameborder="0"
+                  allow="accelerometer; encrypted-media; gyroscope; picture-in-picture"></iframe>
         </div>
       </div>
     </div>
@@ -898,11 +900,112 @@
         <h4 class="section-heading">Check latest reviews and news</h4>
         <h6 class="sub-heading">Discover rumors, news, comparisons ⚖</h6>
         <div class="news-reviews-content">
-        
+          <div class="latest-news">
+            <div class="latest-news-title">Latest News</div>
+            <div class="latest-news-items">
+              <button type="button" class="switch-button"><i class="fa fa-chevron-left"></i></button>
+              <button type="button" class="switch-button"><i class="fa fa-chevron-right"></i></button>
+              <ul class="latest-articles">
+                <li><a href="#">Breaking News! Something interesting under this link...</a></li>
+                <li><a href="#">This item should be shown by clicking on the arrows behind.</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="news-reviews-list">
+            <div class="news-review-item">
+              <div class="like-review">
+                <i class="fa fa-heart-o"></i>
+              </div>
+              <figure class="news-reviews-banner">
+                <a href="#"><img src="./assets/images/news-image.jpg" alt="News picture"></a>
+              </figure>
+              <div class="news-reviews-title">
+                <h6><a href="#">Amazing News about our products!</a></h6>
+                <div class="type">Product News</div>
+              </div>
+            </div>
+            <div class="news-review-item">
+              <div class="like-review">
+                <i class="fa fa-heart-o"></i>
+              </div>
+              <figure class="news-reviews-banner">
+                <a href="#"><img src="./assets/images/reviews-image.jpg" alt="News picture"></a>
+              </figure>
+              <div class="news-reviews-title">
+                <h6><a href="#">Amazing Review our product on YouTube channel.</a></h6>
+                <div class="type">Product Review</div>
+              </div>
+            </div>
+            <div class="news-review-item">
+              <div class="like-review">
+                <i class="fa fa-heart-o"></i>
+              </div>
+              <figure class="news-reviews-banner">
+                <a href="#"><img src="./assets/images/reviews-image.jpg" alt="News picture"></a>
+              </figure>
+              <div class="news-reviews-title">
+                <h6><a href="#">Just long name in the title to check layout flexibility and so on...</a></h6>
+                <div class="type">Product Review</div>
+              </div>
+            </div>
+            <div class="news-review-item">
+              <div class="like-review">
+                <i class="fa fa-heart-o"></i>
+              </div>
+              <figure class="news-reviews-banner">
+                <a href="#"><img src="./assets/images/news-image.jpg" alt="News picture"></a>
+              </figure>
+              <div class="news-reviews-title">
+                <h6><a href="#">Latest News in the World!</a></h6>
+                <div class="type">News</div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
   </section>
+  <footer>
+    <div class="content-wrapper">
+      <div class="footer-content">
+        <div class="footer-item">
+          <h5>About Us</h5>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. A atque autem beatae consequatur corporis dolor eius harum iusto modi
+            nam neque nulla quibusdam quos saepe sequi, suscipit tempore veritatis, voluptates?
+          </p>
+        </div>
+        <div class="footer-item">
+          <div class="footer-links">
+            <div class="footer-info">
+              <h5>For Customers</h5>
+              <a href="#">Product for review</a>
+              <a href="#"> Contact Us</a>
+              <a href="#">Best deals</a>
+              <a href="#">Catalog</a>
+            </div>
+            <div class="footer-info">
+              <h5>For Vendors</h5>
+              <a href="#">Testimonial</a>
+              <a href="#">How to use</a>
+              <a href="#">Donate Us</a>
+              <a href="#">Catalog</a>
+            </div>
+          </div>
+        </div>
+        <div class="footer-item">
+          <h5>Subscribe on Weekly Newsletter</h5>
+          <form>
+            <label for="news-email">Here text that definitely make you subscribe on our Weekly Newsletters! Because our newsletters are the best newsletters in the world!</label>
+            <div class="newsletter-input">
+              <input type="email" id="news-email" placeholder="Email Address" required>
+              <button type="submit" class="newsletter-subscribe">Subscribe</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </footer>
 </div>
 </body>
 </html>
