Responsive layout changes - layout not breaks on any resolution of the screen, all elements looks good and readable; Add dropdown menu for mobile devices.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
         <a href="/" class="logo">
           <img src="./assets/images/logosmall.png" alt="Compare App">
         </a>
+        <label class="mobile-menu" for="mobile-menu-trigger">
+          <i class="fa fa-bars"></i>
+        </label>
+        <input type="checkbox" id="mobile-menu-trigger" hidden>
         <nav class="header-navigation">
           <ul class="nav-container">
             <li>
@@ -50,6 +54,7 @@
             </li>
           </ul>
         </nav>
+        <label class="mobile-menu-overlay" for="mobile-menu-trigger"></label>
       </div>
     </div>
   </header>
