"Affiliate Search" page design implementation; IE-11 fixes; Split CSS files to separate media(responsive), product listing item etc.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/fonts/font-awesome/css/font-awesome.min.css">
   <link href="./css/styles.css" type="text/css" rel="stylesheet">
+  <link href="./css/product-list-item.css" type="text/css" rel="stylesheet">
+  <link href="./css/responsive-styles.css" type="text/css" rel="stylesheet">
 </head>
 <body>
 <div class="page-container">
@@ -1001,7 +1003,8 @@
         <div class="footer-item">
           <h5>Subscribe on Weekly Newsletter</h5>
           <form>
-            <label for="news-email">Here text that definitely make you subscribe on our Weekly Newsletters! Because our newsletters are the best newsletters in the world!</label>
+            <label for="news-email">Here text that definitely make you subscribe on our Weekly Newsletters! Because our newsletters are the
+              best newsletters in the world!</label>
             <div class="newsletter-input">
               <input type="email" id="news-email" placeholder="Email Address" required>
               <button type="submit" class="newsletter-subscribe">Subscribe</button>
