Add links to pages in header navigation dropdow menu; Add "Product Details" page - not finished; Add images.

--- a/product-category.html
+++ b/product-category.html
@@ -43,9 +43,9 @@
             <li>
               <a href="#">💰 Best conversations pages<i class="fa fa-chevron-down"></i></a>
               <ul class="sub-menu">
-                <li><a href="#">Frontend Search</a></li>
-                <li><a href="#">Listing example</a></li>
-                <li><a href="#">Top set page</a></li>
+                <li><a href="affiliate-search.html">Affiliate search</a></li>
+                <li><a href="#">Product Category</a></li>
+                <li><a href="product-details.html">Product Details</a></li>
                 <li><a href="#">Versus Page</a></li>
                 <li><a href="#">Versus Page 2</a></li>
                 <li><a href="#">Top review List</a></li>
